--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.9.0",
+    "dompurify": "^3.2.6",
     "firebase": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.30.1",
+    "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "sass": "^1.89.2",
+    "web-vitals": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
