--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.5.0",
     "firebase": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,5 +28,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
