--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dompurify": "^3.2.6",
+    "dotenv": "^16.5.0",
     "firebase": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
