--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^1.4.0",
+    "cookie-parser": "^1.4.7",
+    "csurf": "^1.11.0",
     "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
     "firebase": "^9.0.0",
