--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "csurf": "^1.11.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "graphql": "^16.6.0",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.11.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
